--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ isort = "^6.0.0"
 psycopg2-binary = "^2.9.10"
 ipython = "^8.32.0"
 crispy-bootstrap5 = "^2024.10"
+djangorestframework = "^3.15.2"
+django-filter = "^25.1"
 
 
 [build-system]
