--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ ipython = "^8.32.0"
 crispy-bootstrap5 = "^2024.10"
 djangorestframework = "^3.15.2"
 django-filter = "^25.1"
+pytest = "^8.3.4"
+pytest-cov = "^6.0.0"
+pytest-django = "^4.10.0"
 
 
 [build-system]
